# ai-vector-newsletter

./: .env.example  .gitignore  CLAUDE.md  EDITORIAL.md  LICENSE  PLAN.md  README.md  SYNCING.md  pyproject.toml  requirements.txt
.claude/agents/: architect.md  editor.md  eval-engineer.md  experience-designer.md  llm-engineer.md  release-engineer.md  retrieval-engineer.md  source-engineer.md  test-engineer.md
.claude/skills/: design-first-eval-first.md  editorial-focus.md  finance-lens.md
.github/: pull_request_template.md
config/: brand.yaml  editorial.yaml  rubric.yaml  sources.yaml
data/: metrics_log.jsonl  published_urls.txt
data/released/2026-05-23/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-05-24/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-05-25/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-05-26/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-05-27/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-05-28/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-05-29/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-05-30/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-05-31/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-06-01/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-06-02/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-06-03/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-06-04/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-06-05/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-06-06/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-06-07/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-06-08/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-06-22/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-06-28/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json
data/released/2026-06-29/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json  verify.json
data/released/2026-07-02/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json  verify.json
data/released/2026-07-03/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json  verify.json
data/released/2026-07-04/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json  verify.json
data/released/2026-07-05/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json  verify.json
data/released/2026-07-06/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json  verify.json
data/released/2026-07-08/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json  verify.json
data/released/2026-07-09/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json  verify.json
data/released/2026-07-10/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json  verify.json
data/released/2026-07-11/: clusters.jsonl  issue.json  items.jsonl  ranked.jsonl  source_health.json  verify.json
docs/: DESIGN.html  DESIGN.md  HANDBOOK.md  PLATFORM_ASKS.md  SOURCES_RESEARCH.md  TEAM.md  index.html
docs/fonts/: fonts.css
docs/internal/: DESIGN.md  PLAN.md  READING_EXPERIENCE.md  SOURCES_RESEARCH.md  TEAM.md
docs/released/: 2026-05-23.html  2026-05-24.html  2026-05-25.html  2026-05-26.html  2026-05-27.html  2026-05-28.html  2026-05-29.html  2026-05-30.html  2026-05-31.html  2026-06-01.html  2026-06-02.html  2026-06-03.html  2026-06-04.html  2026-06-05.html  2026-06-06.html  2026-06-07.html  2026-06-08.html  2026-06-22.html  2026-06-28.html  2026-06-29.html  2026-07-02.html  2026-07-03.html  2026-07-04.html  2026-07-05.html  2026-07-06.html  2026-07-08.html  2026-07-09.html  2026-07-10.html  2026-07-11.html
evals/: RATIFICATION_PENDING.md  README.md  a1_misses_audit_2026-05-30.csv  a1_misses_summary_2026-05-30.md  failure_modes.md  labels.yaml  run_evals.py  test_reading_experience_lint.py
evals/fixtures/: SCHEMA.md
evals/fixtures/2026-05-26-intent-collision/: clusters.jsonl  items.jsonl
evals/fixtures/2026-05-26-pulse-eligibility/: clusters.jsonl  items.jsonl
evals/fixtures/2026-05-27-hf-papers-canonical/: clusters.jsonl  items.jsonl
evals/fixtures/2026-05-27-source-caps/: clusters.jsonl  items.jsonl
evals/fixtures/_regressions/: 2026-05-25_continuation_as_pulse.md  c_78dcc648119217a1_signal_section_mismatch.md
evals/judge/: __init__.py  judge.py
evals/ratifications/: 2026-05-24.md
evals/voice/: 2026-05-23.labels.yaml  2026-05-24.labels.yaml  rubric.yaml
src/: cluster.py  fetch.py  llm_usage.py  models.py  paths.py  preflight.py  rank.py  render.py  review.py  run.py  summarise.py  verify.py
templates/: index.html.j2  issue.html.j2
tests/: CONVENTIONS.md  conftest.py  test_check_integrity.py  test_cluster.py  test_drift_detection.py  test_fetch.py  test_llm_usage.py  test_models.py  test_paths.py  test_preflight.py  test_publish_gate.py  test_rank.py  test_render.py  test_review.py  test_summarise.py  test_verify_day.py
wiki/: PLAN.md
(+24 files in other folders)
