[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-vector"
version = "0.9.0"
description = "Today's AI, with a heading. A daily AI newsletter with a financial-services lens."
requires-python = ">=3.11"
authors = [{ name = "Arman Abrahamyan" }]

# Lower bounds with >=; upper bounds only where a major bump is known to break us.
# Exact versions intentionally not pinned — they rot. If a release breaks us,
# bump the floor here and record the diff in the commit.
dependencies = [
    # Core / contracts
    "pydantic>=2.6,<3.0",          # data contracts in src/models.py
    "python-dotenv>=1.0",          # loads .env at orchestration start
    "pyyaml>=6.0",                 # config/sources.yaml and config/rubric.yaml

    # CLI
    "typer>=0.12",                 # aiv entry point

    # Fetch layer
    "feedparser>=6.0",             # RSS / Atom parsing (src/fetch.py)
    "httpx>=0.27",                 # HN Algolia, Reddit, generic HTTP + LLM transport

    # Retrieval / embeddings
    "sentence-transformers>=2.7",  # loads BAAI/bge-base-en-v1.5 in src/cluster.py
    "numpy>=1.26",                 # centroid math and .npz sidecar storage
    "scikit-learn>=1.4",           # agglomerative clustering in src/cluster.py

    # Source-body extraction (Apache-2.0; gold-standard article extractor)
    "trafilatura>=1.12",           # src/summarise.py per-top-N body fetch

    # Render
    "jinja2>=3.1",                 # HTML templates (src/render.py)

    # LLM clients — LLM_PROVIDER (env) selects which runs.
    "anthropic>=0.39",             # default LLM_PROVIDER=anthropic
    "boto3>=1.34",                 # LLM_PROVIDER=bedrock (AWS SigV4)

    # Evals
    "scipy>=1.12",                 # Spearman correlation in evals/run_evals.py
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
aiv = "src.run:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------------------------------------------------------------------------
# Pytest config -- one place so `pytest` from the repo root finds the suite
# and downstream module tests (test_fetch / test_cluster / test_render)
# pick up the same conventions.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",                  # short summary for non-pass results (skips, xfails, errors)
    "--strict-markers",     # unknown @pytest.mark.* tokens fail loudly
    "--strict-config",      # typos in this section fail loudly too
    "--showlocals",         # locals in tracebacks make pydantic ValidationErrors readable
    "--tb=short",           # tracebacks stay scannable in CI logs
]
# Markers are declared so --strict-markers can do its job. Add new markers
# here as we grow the suite; do NOT inline-declare in test files.
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "network: tests that hit the real network (skipped in unit runs)",
    "integration: end-to-end pipeline tests against fixtures",
]
# Filter out the noisy third-party deprecation warnings that aren't ours
# to fix, but keep our own warnings loud.
filterwarnings = [
    "error",                                                    # treat warnings as errors by default
    "ignore::DeprecationWarning:pydantic.*",                    # pydantic internal deprecations
    "ignore::DeprecationWarning:huggingface_hub.*",
    "ignore::DeprecationWarning:pkg_resources.*",
]
log_cli = false
log_cli_level = "INFO"
